AM_CPPFLAGS = \
    @OS_INCLUDES@ \
    -I$(top_srcdir)/src

noinst_LIBRARIES = libgame.a libgamemain.a libgamesaveconv.a

libgamemain_a_SOURCES = \
    game.c

libgame_a_SOURCES = \
    game.h \
    game_ai.c \
    game_ai.h \
    game_ai_classic.c \
    game_ai_classic.h \
    game_audience.c \
    game_audience.h \
    game_aux.c \
    game_aux.h \
    game_battle.c \
    game_battle.h \
    game_battle_human.c \
    game_battle_human.h \
    game_bomb.c \
    game_bomb.h \
    game_bomb_client.c \
    game_cheat.c \
    game_cheat.h \
    game_client.c \
    game_client.h \
    game_debug.c \
    game_debug.h \
    game_design.c \
    game_design.h \
    game_design_client.c \
    game_design_server.c \
    game_diplo.c \
    game_diplo.h \
    game_election.c \
    game_election.h \
    game_election_client.c \
    game_election_server.c \
    game_end.h \
    game_endecode.h \
    game_event.c \
    game_event.h \
    game_explore.c \
    game_explore.h \
    game_explore_client.c \
    game_fleet.c \
    game_fleet.h \
    game_fleet_client.c \
    game_fleet_server.c \
    game_ground.c \
    game_ground.h \
    game_ground_client.c \
    game_misc.c \
    game_misc.h \
    game_move.c \
    game_move.h \
    game_move_client.c \
    game_msg.h \
    game_new.c \
    game_new.h \
    game_news.c \
    game_news.h \
    game_newtech.c \
    game_newtech.h \
    game_newtech_client.c \
    game_num.c \
    game_num.h \
    game_nump.c \
    game_nump.h \
    game_parsed.c \
    game_parsed.h \
    game_planet.c \
    game_planet.h \
    game_planet_client.c \
    game_planet_server.c \
    game_save.c \
    game_save.h \
    game_server.h \
    game_server_msg.c \
    game_shipdesign.c \
    game_shipdesign.h \
    game_shiptech.c \
    game_shiptech.h \
    game_spy.c \
    game_spy.h \
    game_spy_esp_client.c \
    game_spy_esp_server.c \
    game_spy_sab_client.c \
    game_spy_sab_server.c \
    game_stat.c \
    game_stat.h \
    game_str.c \
    game_str_shipnames.c \
    game_str.h \
    game_strp.c \
    game_strp.h \
    game_tech.c \
    game_tech.h \
    game_techtypes.h \
    game_transport.c \
    game_transport.h \
    game_transport_client.c \
    game_turn.c \
    game_turn.h \
    game_turn_client.c \
    game_turn_server.c \
    game_turn_server.h \
    game_turn_start.c \
    game_turn_start.h \
    game_types.h \
    game_view.c \
    game_view.h

libgamesaveconv_a_SOURCES = \
    game_save.c \
    game_save.h \
    game_str_shipnames.c \
    game_str.h
